# iron_turtle

./: CMakeLists.txt  README  main.cpp  main_ascii_test.cpp  web_server_worker.cpp  web_server_worker.h
following_processor/: folowing_processor.cpp  folowing_processor.h
process_camera/: rear_sight_webrtc_manipulation.cpp  rear_sight_webrtc_manipulation.h
process_camera/face_detector_ocv/: face_detection_processor.cpp  face_detection_processor.h
process_camera/form_detector_ocv/: form_det_track_svm.cpp  form_detection_processor.cpp  form_detection_processor.h  form_detection_processor_dnn_caffe.cpp  form_detection_processor_dnn_caffe.h  form_detection_processor_haarcascade.cpp  form_detection_processor_yolov3_tiny.cpp  form_detection_processor_yolov3_tiny.h
process_camera/intel_realsense_camera/: realsense_camera_processor.cpp  realsense_camera_processor.h
process_camera/rear_sight_processor/: image_processing.h  rear_sight_processor.cpp  rear_sight_processor.h  rear_sight_processor_keep_frame_proportionality.cpp
pursuit_processor/: pursuit_processor.cpp  pursuit_processor.h
src/dnn/yolo_caffe/: yolo_darknet_deploy.prototxt
src/dnn/yolov3_tiny_cross_hands/: cross-hands-tiny.cfg
src/dnn/yolov3_tiny_hand_detection/: yolov3-tiny.cfg
src/haarcascade/hands_haarcascades/: rpalm.xml
src/server_files/: index.css  index.html  index.js
src/svm/: Hand_Detector_v10_c10.svm  Hand_Detector_v11_c15_super.svm  Hand_Detector_v12_c15_super.svm  Hand_Detector_v14_c15_super.svm  Hand_Detector_v6_c20.svm  Hand_Detector_v8_c8.svm
turtle_manager/: smooth_turtle_manager.cpp  smooth_turtle_manager.h  stepped_smooth_turtle_manager.cpp  stepped_smooth_turtle_manager.h  turtle_manager.cpp  turtle_manager.h
turtle_manager/ascii_com_manager/: ascii_com_lim.h  ascii_native_driver.cpp  ascii_native_driver.h  ascii_native_driver_posn_save.cpp  ascii_native_driver_posn_save.h  serial_manager.cpp  serial_manager.h
turtle_manager/binary_com_manager/: binary_com_lim.h  serial_manager.cpp  serial_manager.h
turtle_manager/binary_com_manager/bipropellant-api/: HoverboardAPI.cpp
web_server/: web_server.cpp  web_server.h  web_server_worker.cpp  web_server_worker.h
web_server/lib_my_event_handler/: delegate_ws.cpp  delegate_ws.h  event_ws.cpp  event_ws.h  handler_ws.h
